--- a/Gomel_T_a_N/scss/frame.scss
+++ b/Gomel_T_a_N/scss/frame.scss
@@ -96,7 +96,7 @@ body {
                 padding-top: 3%;
                 padding-bottom: 0.5%;
                 overflow: scroll;
-                mask-image: linear-gradient(0deg, transparent, #000 10%, #000 90%, transparent); 
+                mask-image: linear-gradient(0deg, transparent, #000 10%, #000 90%, transparent);
                 & p {
                     display: block;
                     width: 100%;
@@ -486,6 +486,11 @@ body {
                         & div:nth-child(1) {
                             height: 300px;
                             border: solid 8px #564343;
+                            & img {
+                                object-fit: cover;
+                                width: 100%;
+                                height: 100%;
+                            }
                         }
                         & div:nth-child(2) {
                             display: flex;
